@@ -93,12 +93,16 @@ CONF.HASH_OPTIMIZE = true
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
 #CONF.LOG_IMPORT_NTIMES_POP = 1
 
-##  CONF.PROCESSOR_MON_ON = true
+##  CONF.PROCESSOR_MON_ON = false
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
 ##  CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
 ##CONF.USE_RESOLV_REPLACE = false
+
+##CONF.BLOCK_USE_STDOUT = true
+#CONF.BLOCK_USE_STDOUT = false
+
 
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
