@@ -113,6 +113,8 @@ module Fairy
 
     def_prop :USE_RESOLV_REPLACE
     
+    def_prop :BLOCK_USE_STDOUT
+
     def_prop :DEBUG_PORT_WAIT
     def_prop :DEBUG_FULL_BACKTRACE
     def_prop :DEBUG_THREAD_ABORT_ON_EXCEPTION
@@ -237,12 +239,14 @@ module Fairy
   CONF.LOG_LEVEL = :DEBUG
   CONF.LOG_IMPORT_NTIMES_POP = 10000
 
-  CONF.PROCESSOR_MON_ON = true
+  CONF.PROCESSOR_MON_ON = false
   CONF.PROCESSOR_MON_INTERVAL = 60
   CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
   CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
   CONF.USE_RESOLV_REPLACE = false
+
+  CONF.BLOCK_USE_STDOUT = true
 
   CONF.DEBUG_PORT_WAIT = false
   CONF.DEBUG_FULL_BACKTRACE = false
